fix shopping cart item alignment

--- a/client/src/components/Cart/style.css
+++ b/client/src/components/Cart/style.css
@@ -1,5 +1,7 @@
 @import url('https://fonts.googleapis.com/css2?family=Teko:wght@300&display=swap');
 
+
+
 .parent {
   position:fixed;
   display: flex;
@@ -9,8 +11,9 @@
   width: 100%;
   height: 23px;
 }
+
 .cart {
-  position:absolute;
+  justify-content: center;
   width: 1000px;
   height: 500px;
   text-align: center;
@@ -28,6 +31,8 @@
   padding-bottom: .5rem;
   margin: 1rem 0;
 }
+
+
 
 .cart h3 {
   font-family:'Teko', sans-serif;
@@ -61,6 +66,7 @@
 .cart-closed:hover {
   transform: rotate(8deg);
 }
+
 
 .cart img {
   width: 70px;
